--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -6,40 +7,49 @@
 }
 
 /*---------------color---------------------*/
-:root{
-  --primary:   #e74c3c   ;
+:root {
+  --primary: #e74c3c;
 }
+
 /*---------------color---------------------*/
 
 html {
   scroll-behavior: smooth;
 }
+
 body {
   font-family: "Poppins", sans-serif;
   background-color: #ecf0f3;
 }
+
 .container {
   max-width: 95%;
   margin: auto;
 }
+
 a {
   text-decoration: none;
   color: black;
 }
+
 li {
   list-style: none;
 }
+
 .uppercase {
   text-transform: uppercase;
 }
+
 .capitalize {
   text-transform: capitalize;
 }
-p{
+
+p {
   color: #3c3e41;
   text-align: justify;
 }
-.text-center{
+
+.text-center {
   text-align: center;
 }
 
@@ -55,6 +65,7 @@ p{
   display: flex;
   justify-content: space-between;
 }
+
 .f_flex {
   display: flex;
 }
@@ -65,6 +76,7 @@ button {
   outline: none;
   background-color: none;
 }
+
 .btn_shadow {
   padding: 18px 25px;
   border-radius: 6px;
@@ -73,10 +85,12 @@ button {
   color: #000;
   transition: 0.5s;
 }
+
 .btn_shadow {
   background: linear-gradient(145deg, #e2e8ec, #ffffff);
   box-shadow: 4px 4px 8px #cbcbcb, -4px -4px 8px #ffffff;
 }
+
 .btn_shadow:hover {
   background: var(--primary);
   color: white;
@@ -98,32 +112,36 @@ button {
   width: 50%;
 }
 */
-.top{
+.top {
   margin-top: 80px;
 }
-.mtop{
+
+.mtop {
   margin-top: 40px;
 }
 
 /*====================heading====================*/
-.heading{
+.heading {
   margin: 50px 0 50px 0;
 }
-.heading h4{
+
+.heading h4 {
   color: var(--primary);
   letter-spacing: 2px;
   font-weight: 400;
 }
-.heading h1{
+
+.heading h1 {
   font-size: 60px;
   color: #3c3e41;
 }
-h1{
+
+h1 {
   color: #3c3e41;
 }
 
 /*====================Grid====================*/
-.grid{
+.grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 35px;
@@ -131,7 +149,7 @@ h1{
 
 /*---------------textarea input----------------*/
 textarea,
-input{
+input {
   width: 100%;
   padding: 20px;
   border-radius: 5px;
@@ -143,16 +161,22 @@ input{
 
 /*----------Footer---------*/
 footer {
-  margin: 20% 0 10% 0;
+  margin-top: 50px;
+  background: #050A30;
+  padding: 50px;
 }
+
 footer p {
   margin-top: 30px;
+  color: white;
 }
+
 /*----------Footer---------*/
 @media (max-width: 768px) {
   .grid {
     grid-template-columns: repeat(2, 1fr);
   }
+
   .left,
   .right {
     width: 100%;
