--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -1,14 +1,19 @@
-.modal-blog.modal,
+.modal-blog.Modal,
 .modal-blog.overlay {
   overflow: scroll;
 }
 
-.modal-blog.modal .modal-content {
+.modal-blog.Modal .modal-content {
   position: relative;
   top: 10%;
-  left: 0; 
+  left: 0;
   margin: auto;
   margin-bottom: 10%;
+}
+
+.modal-blog .modal-content img {
+  width: 100%;
+  height: 60vh;
 }
 
 .modal-blog .modal-content .left,
@@ -24,8 +29,16 @@
   margin: 0 25px 0 0;
 }
 
+
 /*----------blog_contact--------*/
 @media (max-width: 768px) {
+
+
+  .modal-blog .modal-content img {
+    width: 100%;
+    height: 100%;
+  }
+
   .modal-blog.modal .modal-content {
     max-width: 90%;
   }
