--- a/src/components/Head/Header.css
+++ b/src/components/Head/Header.css
@@ -54,10 +54,24 @@ header ul li a:hover {
   display: none;
 }
 
+
+
+
+
+
 /*active button*/
+
+
 .navbar-light .navbar-nav .nav-item .nav-link:hover,
 .navbar-light .navbar-nav .nav-item.active .nav-link{
     color:var(--primary) !important;
+}
+
+.navbar-light .navbar-nav .nav-link:hover,
+.navbar i:hover,
+.navbar-light .navbar-nav .nav-link.active,
+.navbar i.active{
+ color:  var(--primary)!important;
 }
 
 
