--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -1,11 +1,3 @@
-.resume .heading h1{
-font-size: 40px;
-}
-
-.resume .content{
-    max-width: 85%;
-    margin: auto;
-}
 
 .resume .box{
     padding: 40px;
@@ -13,7 +5,7 @@ font-size: 40px;
 
 .resume hr{
     margin: 30px 0 30px 0;
-    border: 1px solid #e3e9ed;
+    border: 1px solid #5eabde;
     background-color: #e3e9ed;
 }
 
@@ -48,6 +40,7 @@ font-size: 40px;
   }
 
   /* ------dag------*/
+  /*
   .resume .content-section {
     position: relative;
   }
@@ -60,7 +53,7 @@ font-size: 40px;
     position: absolute;
     top: 12%;
     left: 0;
-    height: 118vh;
+    height: 150vh;
     width: 5px;
     background: #d9dee2;
     z-index: -2;
@@ -69,7 +62,7 @@ font-size: 40px;
     content: "";
     position: absolute;
     top: 8%;
-    left: -8%;
+    left: -11%;
     height: 5px;
     width: 50px;
     background: #d9dee2;
@@ -77,8 +70,8 @@ font-size: 40px;
   .resume .box::before {
     content: "";
     position: absolute;
-    top: 6%;
-    left: -10%;
+    top: 7%;
+    left: -12%;
     height: 10px;
     width: 10px;
     background: #fff;
@@ -90,6 +83,7 @@ font-size: 40px;
   .resume .box:hover.box:before {
     background: #ff3a75;
   }
+  */
   /*
   @media (max-width: 768px) {
     .resume .d_flex {
