--- a/src/components/Features/Features.css
+++ b/src/components/Features/Features.css
@@ -1,7 +1,8 @@
 .features .box {
     padding: 50px;
-    margin: 10px;
-    height: 500px;
+    
+    height: 450px;
+    width: 100%;
     margin-right: -15px;
   }
   .features .box h2 {
@@ -24,4 +25,6 @@
     color: white;
     opacity: 1;
   }
+
+  
   
