--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -14,7 +14,6 @@
 }
 
 .portfolio .img {
-  height: 300px;
   overflow: hidden;
   transition: 0.5s;
 }
@@ -179,6 +178,7 @@ body.active-modal {
   .Modal,
   .overlay {
     overflow: scroll !important;
+    margin-top: -80px;
   }
 
   .Modal,
@@ -192,7 +192,7 @@ body.active-modal {
   }
 
   .Modal .modal-img {
-    margin: 20px 0 20px 0;
+    margin: 10px 0 10px 0;
   }
 
   .modal-content {
