--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -1,43 +1,35 @@
 
-.resume .box{
-    padding: 40px;
-}
-
-.resume hr{
-    margin: 30px 0 30px 0;
-    border: 1px solid #5eabde;
-    background-color: #e3e9ed;
-}
-
-.resume .rate .btn_shadow{
-    color: #ff014f;
-    padding: 15px 30px;
-    font-weight: bold;
-    transition: 0.5s;
-}
-
-.resume p{
-    font-size: 18px;
-    transition: 0.5s;
-}
-
-.resume .box{
-    margin-bottom: 40px;
-    position: relative;
-}
-
-.resume .btn_shadow:hover{
-    transform: translate(0);
-}
-
-.resume .box:hover .btn_shadow {
-    background: #ff3a75;
-    box-shadow: none;
-    color: white;
+  
+  .resume .box{
+      padding: 40px;
+      margin-bottom: 40px;
+      background: var(--primary);
+      color: white;
   }
-  .resume .box:hover p {
-    color: white;
+
+  .resume .box span{
+    text-align: justify!important;
   }
+
+  .resume .box:hover{
+    background: var(--primary);
+    color: #000;
+    background: linear-gradient(145deg, #e2e8ec, #ffffff);
+    box-shadow: 4px 4px 8px #cbcbcb, -4px -4px 8px #ffffff;
+    border-radius: 10px;
+    transition: .5s;
+  }
+
+  .resume hr{
+      margin: 30px 0 30px 0;
+      border: 2px solid #e3e9ed;
+  }
+
+  .resume .btn_shadow:hover{
+      transform: translate(0);
+  }
+
+  
 
   /* ------dag------*/
   /*
